--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Automobiles</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
 </head>
 <body>
-
+    <header>
+        <nav>
+            <ul>
+                <li><button id="loadAllAutomobiles">Load All Automobiles</button></li>
+                <li><button id="loadAllModels">Load All Models</button></li>
+                <li><button id="loadAllMakers">Load All Makers</button></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <table>
+            <thead>
+            <tr>
+                <th>Maker</th>
+                <th>Model</th>
+                <th>Engine Capacity</th>
+                <th>Registration Number</th>
+                <th>Colour</th>
+                <th>Horse Power</th>
+                <th>Owner</th>
+            </tr>
+            </thead>
+            <tbody class="automobile-table-container">
+            </tbody>
+        </table>
+    </main>
+    <script src="../static/app.js" type="text/javascript"></script>
 </body>
 </html>
