--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Automobiles</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
     <header>
@@ -31,6 +32,31 @@
             <tbody class="automobile-table-container">
             </tbody>
         </table>
+        <br />
+        <br />
+        <form>
+            <h3>FORM</h3>
+            <label>MAKER</label>
+            <input type="text" id="maker" placeholder="Maker...">
+            <label>MODEL</label>
+            <input type="text" id="model" placeholder="Model...">
+            <label>OWNER FIRST NAME</label>
+            <input type="text" id="ownerFirstName" placeholder="Peter">
+            <label>OWNER MIDDLE NAME</label>
+            <input type="text" id="ownerMiddleName" placeholder="Peter">
+            <label>OWNER LAST NAME</label>
+            <input type="text" id="ownerLastName" placeholder="Peter">
+            <label>HORSE POWER</label>
+            <input type="number" id="horsePower" placeholder="1">
+            <label>COLOUR</label>
+            <input type="text" id="colour" placeholder="Black">
+            <label>REGISTRATION NUMBER</label>
+            <input type="text" id="registrationNumber" placeholder="AB1234CD">
+            <label>ENGINE CAPACITY</label>
+            <input type="text" id="engineCapacity" placeholder="200">
+            <button id="create-btn">Create</button>
+            <button id="edit-btn" style="display: none">Edit</button>
+        </form>
     </main>
     <script src="../static/app.js" type="text/javascript"></script>
 </body>
