Form sends the correct information to the back-end

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,7 @@
                 <th>Colour</th>
                 <th>Horse Power</th>
                 <th>Owner</th>
+                <th>Actions</th>
             </tr>
             </thead>
             <tbody class="automobile-table-container">
@@ -36,6 +37,7 @@
         <br />
         <form>
             <h3>FORM</h3>
+            <input type="hidden" id="autoId">
             <label>MAKER</label>
             <input type="text" id="maker" placeholder="Maker...">
             <label>MODEL</label>
