Backend logic for adding a new automobile

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,12 +42,8 @@
             <input type="text" id="maker" placeholder="Maker...">
             <label>MODEL</label>
             <input type="text" id="model" placeholder="Model...">
-            <label>OWNER FIRST NAME</label>
-            <input type="text" id="ownerFirstName" placeholder="Peter">
-            <label>OWNER MIDDLE NAME</label>
-            <input type="text" id="ownerMiddleName" placeholder="Peter">
-            <label>OWNER LAST NAME</label>
-            <input type="text" id="ownerLastName" placeholder="Peter">
+            <label>OWNER EMAIL</label>
+            <input type="email" id="ownerEmail" placeholder="peter@peter.com">
             <label>HORSE POWER</label>
             <input type="number" id="horsePower" placeholder="1">
             <label>COLOUR</label>
