--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,31 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Automobiles</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="../static/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><button id="loadAllAutomobiles">Load All Automobiles</button></li>
-                <li><button id="loadAllModels">Load All Models</button></li>
-                <li><button id="loadAllMakers">Load All Makers</button></li>
+                <li><button class="btn btn-primary" id="loadAllAutomobiles">Load All Automobiles</button></li>
+                <li>
+                    <input type="text" class="form-control" id="inputMaker" placeholder="Suzuki">
+                    <button class="btn btn-success">Load Automobiles by Maker</button>
+                </li>
             </ul>
         </nav>
     </header>
     <main>
-        <table>
-            <thead>
+        <table class="table">
+            <thead class="thead-dark">
             <tr>
-                <th>Maker</th>
-                <th>Model</th>
-                <th>Engine Capacity</th>
-                <th>Registration Number</th>
-                <th>Colour</th>
-                <th>Horse Power</th>
-                <th>Owner</th>
-                <th>Actions</th>
+                <th scope="col">Maker</th>
+                <th scope="col">Model</th>
+                <th scope="col">Engine Capacity</th>
+                <th scope="col">Registration Number</th>
+                <th scope="col">Colour</th>
+                <th scope="col">Horse Power</th>
+                <th scope="col">Owner</th>
+                <th scope="col">Actions</th>
             </tr>
             </thead>
             <tbody class="automobile-table-container">
@@ -37,11 +39,16 @@
         <br />
         <form>
             <h3>FORM</h3>
+            <ul id="error-msgs"></ul>
             <input type="hidden" id="autoId">
             <label>MAKER</label>
-            <input type="text" id="maker" placeholder="Maker...">
+            <select id="maker-names-select" class="form-control">
+                <option>Suzuki</option>
+            </select>
             <label>MODEL</label>
-            <input type="text" id="model" placeholder="Model...">
+            <select id="model-names-select" class="form-control">
+                <option>Mustang</option>
+            </select>
             <label>OWNER EMAIL</label>
             <input type="email" id="ownerEmail" placeholder="peter@peter.com">
             <label>HORSE POWER</label>
