--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -5,19 +5,15 @@ nav {
     margin: 0 auto;
 }
 nav ul {
-    margin: 0;
-    padding: 0;
+    padding-top: 2rem;
     list-style: none;
     text-align: center;
 }
 nav ul li {
-    margin: 0;
-    padding: 0;
     display: inline-block;
 }
 nav ul li button {
     text-decoration: none;
-    padding: 10px 20px;
     display: block;
     color: #000000;
     text-align: center;
@@ -25,14 +21,10 @@ nav ul li button {
 
 table {
     border: 1px solid black;
-    margin-top: 1rem;
+    margin-top: 4rem;
     margin-left: auto;
     margin-right: auto;
-}
-
-th:not(:last-child), td {
-    border-right: 1px solid black;
-    text-align: center;
+    max-width: 70%;
 }
 
 label, input {
@@ -58,4 +50,8 @@ form button {
     color:white;
     border: none;
     padding: 0.5%;
+}
+
+#maker-names-select, #model-names-select {
+    max-width: 20%;
 }
