--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,10 @@
             <ul>
                 <li><button class="btn btn-primary" id="loadAllAutomobiles">Load All Automobiles</button></li>
                 <li>
-                    <input type="text" class="form-control" id="inputMaker" placeholder="Suzuki">
                     <button class="btn btn-success">Load Automobiles by Maker</button>
+                </li>
+                <li>
+                <input type="text" class="form-control" id="inputMaker" placeholder="Suzuki">
                 </li>
             </ul>
         </nav>
@@ -39,28 +41,65 @@
         <br />
         <form>
             <h3>FORM</h3>
-            <ul id="error-msgs"></ul>
-            <input type="hidden" id="autoId">
-            <label>MAKER</label>
-            <select id="maker-names-select" class="form-control">
-                <option>Suzuki</option>
-            </select>
-            <label>MODEL</label>
-            <select id="model-names-select" class="form-control">
-                <option>Mustang</option>
-            </select>
-            <label>OWNER EMAIL</label>
-            <input type="email" id="ownerEmail" placeholder="peter@peter.com">
-            <label>HORSE POWER</label>
-            <input type="number" id="horsePower" placeholder="1">
-            <label>COLOUR</label>
-            <input type="text" id="colour" placeholder="Black">
-            <label>REGISTRATION NUMBER</label>
-            <input type="text" id="registrationNumber" placeholder="AB1234CD">
-            <label>ENGINE CAPACITY</label>
-            <input type="text" id="engineCapacity" placeholder="200">
+            <div class="row g-3 align-items-center justify-content-center">
+                <input type="hidden" id="autoId">
+                <label>MAKER</label>
+                <select id="maker-names-select" class="form-control" aria-describedby="passwordHelpInline">
+                    <option>Suzuki</option>
+                </select>
+                <label>MODEL</label>
+                <select id="model-names-select" class="form-control" aria-describedby="passwordHelpInline">
+                    <option>Mustang</option>
+                </select>
+                <label>OWNER EMAIL</label>
+                <p>Note: The email needs to be registered in the database beforehand</p>
+                    <div class="col-auto">
+                        <input type="email" id="ownerEmail" placeholder="peter@peter.com" class="form-control" aria-describedby="passwordHelpInline">
+                    </div>
+                <div class="col-auto">
+                    <span id="ownerEmailErrors" class="form-text">
+                    </span>
+                </div>
+                <label>HORSE POWER</label>
+                <div class="col-auto">
+                    <input type="number" id="horsePower" placeholder="1" class="form-control" aria-describedby="passwordHelpInline">
+                </div>
+                <div class="col-auto">
+                    <span id="horsePowerErrors" class="form-text">
+                      
+                    </span>
+                </div>
+                <label>COLOUR</label>
+                <div class="col-auto">
+                    <input type="text" id="colour" placeholder="Black" class="form-control" aria-describedby="passwordHelpInline">
+                </div>
+                <div class="col-auto">
+                    <span id="colourErrors" class="form-text">
+                      
+                    </span>
+                </div>
+                <label>REGISTRATION NUMBER</label>
+                <div class="col-auto">
+                    <input type="text" id="registrationNumber" placeholder="AB1234CD" class="form-control" aria-describedby="passwordHelpInline">
+                </div>
+                <div class="col-auto">
+                    <span id="registrationNumberErrors" class="form-text">
+                      
+                    </span>
+                </div>
+                <label>ENGINE CAPACITY</label>
+                <div class="col-auto">
+                    <input type="text" id="engineCapacity" placeholder="200" class="form-control" aria-describedby="passwordHelpInline">
+                </div>
+                <div class="col-auto">
+                    <span id="engineCapacityErrors" class="form-text">
+                      
+                    </span>
+                </div>
+            </div>
             <button id="create-btn">Create</button>
             <button id="edit-btn" style="display: none">Edit</button>
+
         </form>
     </main>
     <script src="../static/app.js" type="text/javascript"></script>
