--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><button class="btn btn-primary" id="loadAllAutomobiles">Load All Automobiles</button></li>
                 <li>
-                    <button class="btn btn-success">Load Automobiles by Maker</button>
+                    <button id="auto-finder" class="btn btn-success">Load Automobiles by Maker</button>
                 </li>
                 <li>
                 <input type="text" class="form-control" id="inputMaker" placeholder="Suzuki">
